Bug 349234 - SVG export image does not look like the actual diagram
Summary: SVG export image does not look like the actual diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.15.3 (KDE Applications 14.12.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-16 14:09 UTC by Barade
Modified: 2015-06-16 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.3 (KDE Applications 15.04.3)
Sentry Crash Report:


Attachments
Class diagram (112.23 KB, application/x-uml)
2015-06-16 14:09 UTC, Barade
Details
Class diagram as SVG (51.73 KB, image/svg+xml)
2015-06-16 14:10 UTC, Barade
Details
Class diagram as BMP (804.05 KB, image/bmp)
2015-06-16 14:10 UTC, Barade
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Barade 2015-06-16 14:09:12 UTC
While the BMP export image looks like the class diagram in Umbrello the SVG export does not.
I think that the font or the positions or both have changed.

Reproducible: Always
Comment 1 Barade 2015-06-16 14:09:48 UTC
Created attachment 93195 [details]
Class diagram
Comment 2 Barade 2015-06-16 14:10:16 UTC
Created attachment 93196 [details]
Class diagram as SVG
Comment 3 Barade 2015-06-16 14:10:35 UTC
Created attachment 93197 [details]
Class diagram as BMP
Comment 4 Ralf Habacker 2015-06-16 14:35:24 UTC
Here are some observation results on linux with version 2.16.99 using Qt 4.8.5:
1. The font setting in the xmi file (interface.xmi  -> Sans Serif,9) is transfered 1:1 into the svg file (interface.svg -> font-family="Sans Serif" font-size="9"). 
2. Changing the class diagram font size to 10 point shows the same vertical position and size of the methods as the exported bmp file
3. The vertical positions of the exported svg file looks like generated using a 10 point high font but displayed with 9 point size.
Comment 5 Ralf Habacker 2015-06-16 21:32:47 UTC
Git commit af8679befd1251475a4bcfdab5e6582a88d065d2 by Ralf Habacker.
Committed on 16/06/2015 at 21:31.
Pushed by habacker into branch 'Applications/15.04'.

Fix 'SVG export image does not look like the actual diagram'.

The with and height of the exported file need to match the
font resolution to get what is displayed on the screen.
FIXED-IN:2.16.3 (KDE Applications 15.04.3)

M  +4    -2    umbrello/umlviewimageexportermodel.cpp

http://commits.kde.org/umbrello/af8679befd1251475a4bcfdab5e6582a88d065d2