Fix 'SVG export image does not look like the actual diagram'.

The with and height of the exported file need to match the
font resolution to get what is displayed on the screen.

BUG:349234
FIXED-IN:2.16.3 (KDE Applications 15.04.3)